==> AnQ-LH/gd32f427/User/src/bsp_uart.c <==
#include "bsp_uart.h"
#include "bsp.h"
#define USART0_CLK_ENABLE()              rcu_periph_clock_enable(RCU_USART0)
#define USART0_TX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOA)
#define USART0_TX_GPIO_PORT              GPIOA
#define USART0_TX_PIN                    GPIO_PIN_9
#define USART0_TX_AF                     GPIO_AF_7
#define USART0_RX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOA)
#define USART0_RX_GPIO_PORT              GPIOA
#define USART0_RX_PIN                    GPIO_PIN_10
#define USART0_RX_AF                     GPIO_AF_7
#define USART1_CLK_ENABLE()              rcu_periph_clock_enable(RCU_USART1)
#define USART1_TX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOA)
#define USART1_TX_GPIO_PORT              GPIOA
#define USART1_TX_PIN                    GPIO_PIN_2
#define USART1_TX_AF                     GPIO_AF_7
#define USART1_RX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOA)
#define USART1_RX_GPIO_PORT              GPIOA
#define USART1_RX_PIN                    GPIO_PIN_3
#define USART1_RX_AF                     GPIO_AF_7
#define USART2_CLK_ENABLE()              rcu_periph_clock_enable(RCU_USART2);
#define USART2_TX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOD);
#define USART2_TX_GPIO_PORT              GPIOD
#define USART2_TX_PIN                    GPIO_PIN_8
#define USART2_TX_AF                     GPIO_AF_7
#define USART2_RX_GPIO_CLK_ENABLE()      rcu_periph_clock_enable(RCU_GPIOD);

UART_T *ComToUart(COM_PORT_E _ucPort)
{
	if (_ucPort == COM0)
	{
		#if UART0_FIFO_EN == 1
			return &g_tUart0;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM1)
	{
		#if UART1_FIFO_EN == 1
			return &g_tUart1;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM2)
	{
		#if UART2_FIFO_EN == 1
			return &g_tUart2;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM3)
	{
		#if UART3_FIFO_EN == 1
			return &g_tUart3;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM4)
	{
		#if UART4_FIFO_EN == 1
			return &g_tUart4;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM5)
	{
		#if UART5_FIFO_EN == 1
			return &g_tUart5;
		#else
			return 0;
		#endif
	}
	else
	{
		/* 不做任何处理 */
		return 0;
	}
}

uint32_t ComToUSARTx(COM_PORT_E _ucPort)
{
	if (_ucPort == COM0)
	{
		#if UART0_FIFO_EN == 1
			return USART0;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM1)
	{
		#if UART1_FIFO_EN == 1
			return USART1;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM2)
	{
		#if UART2_FIFO_EN == 1
			return USART2;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM3)
	{
		#if UART3_FIFO_EN == 1
			return UART3;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM4)
	{
		#if UART4_FIFO_EN == 1
			return UART4;
		#else
			return 0;
		#endif
	}
	else if (_ucPort == COM5)
	{
		#if UART5_FIFO_EN == 1
			return USART5;
		#else
			return 0;
		#endif
	}
	
	else
	{
		/* 不做任何处理 */
		return 0;
	}
}

void comSetBaud(COM_PORT_E _ucPort, uint32_t _BaudRate)
{
	uint32_t USARTx;
	
	USARTx = ComToUSARTx(_ucPort);
	if (USARTx == 0)
	{
		return;
	}
	
	bsp_SetUartParam(USARTx, _BaudRate, USART_PM_NONE);
}

void bsp_SetUartParam(uint32_t USARTx,  uint32_t BaudRate, uint32_t Parity)
{
	
	/*##-1- 配置串口硬件参数 ######################################*/
	/* 异步串口模式 (UART Mode) */
	/* 配置如下:
	  - 字长    = 8 位
	  - 停止位  = 1 个停止位
	  - 校验    = 参数Parity
	  - 波特率  = 参数BaudRate
	  - 硬件流控制关闭 (RTS and CTS signals) */
	usart_baudrate_set(USARTx, BaudRate);
	usart_word_length_set(USARTx, USART_WL_8BIT);
	usart_stop_bit_set(USARTx, USART_STB_1BIT);
	usart_parity_config(USARTx, Parity);
	usart_hardware_flow_rts_config(USARTx, USART_RTS_DISABLE);
	usart_hardware_flow_cts_config(USARTx, USART_CTS_DISABLE);
	usart_receive_config(USARTx, USART_RECEIVE_ENABLE);
	usart_transmit_config(USARTx, USART_TRANSMIT_ENABLE);
	
	usart_enable(USARTx);
}

static void InitHardUart(void)
{

#if UART0_FIFO_EN == 1		/* 串口1 */
	/* 使能 GPIO TX/RX 时钟 */
	USART0_TX_GPIO_CLK_ENABLE();
	USART0_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART0_CLK_ENABLE();	

	/* 配置TX引脚 */
	gpio_af_set(USART0_TX_GPIO_PORT, USART0_TX_AF, USART0_TX_PIN);
	gpio_mode_set(USART0_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART0_TX_PIN);
	gpio_output_options_set(USART0_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART0_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(USART0_RX_GPIO_PORT, USART0_RX_AF, USART0_RX_PIN);
	gpio_mode_set(USART0_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART0_RX_PIN);
	gpio_output_options_set(USART0_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART0_RX_PIN);

	/* 配置NVIC the NVIC for UART */
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(USART0_IRQn, 0, 1);;
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART0,  UART0_BAUD, USART_PM_NONE);

	USART_STAT0(USART0) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(USART0) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(USART0) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */

#endif

#if UART1_FIFO_EN == 1		/* 串口2 */
	/* 使能 GPIO TX/RX 时钟 */
	USART1_TX_GPIO_CLK_ENABLE();
	USART1_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART1_CLK_ENABLE();	
	
	/* 配置TX引脚 */
	gpio_af_set(USART1_TX_GPIO_PORT, USART1_TX_AF, USART1_TX_PIN);
	gpio_mode_set(USART1_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART1_TX_PIN);
	gpio_output_options_set(USART1_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART1_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(USART1_RX_GPIO_PORT, USART0_RX_AF, USART1_RX_PIN);
	gpio_mode_set(USART1_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART1_RX_PIN);
	gpio_output_options_set(USART1_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART1_RX_PIN);
	

	/* 配置NVIC the NVIC for UART */   
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(USART1_IRQn, 0, 2);;
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART1,  UART1_BAUD, USART_PM_NONE);
	
	USART_STAT0(USART1) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(USART1) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(USART1) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */
#endif

#if UART2_FIFO_EN == 1			/* 串口3 */
	/* 使能 GPIO TX/RX 时钟 */
	USART2_TX_GPIO_CLK_ENABLE();
	USART2_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART2_CLK_ENABLE();	

	/* 配置TX引脚 */
	gpio_af_set(USART2_TX_GPIO_PORT, USART1_TX_AF, USART2_TX_PIN);
	gpio_mode_set(USART2_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART2_TX_PIN);
	gpio_output_options_set(USART2_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART2_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(USART2_RX_GPIO_PORT, USART0_RX_AF, USART2_RX_PIN);
	gpio_mode_set(USART2_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART2_RX_PIN);
	gpio_output_options_set(USART2_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART2_RX_PIN);
	

	/* 配置NVIC the NVIC for UART */   
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(USART2_IRQn, 0, 3);
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART2,  UART1_BAUD, USART_PM_NONE);
	
	USART_STAT0(USART2) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(USART2) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(USART2) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */
#endif

#if UART3_FIFO_EN == 1			/* 串口4 TX = PC10   RX = PC11 */
	/* 使能 GPIO TX/RX 时钟 */
	UART3_TX_GPIO_CLK_ENABLE();
	UART3_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	UART3_CLK_ENABLE();	

	/* 配置TX引脚 */
	gpio_af_set(UART3_TX_GPIO_PORT, USART1_TX_AF, UART3_TX_PIN);
	gpio_mode_set(UART3_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, UART3_TX_PIN);
	gpio_output_options_set(UART3_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, UART3_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(UART3_RX_GPIO_PORT, USART0_RX_AF, UART3_RX_PIN);
	gpio_mode_set(UART3_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, UART3_RX_PIN);
	gpio_output_options_set(UART3_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, UART3_RX_PIN);
	

	/* 配置NVIC the NVIC for UART */   
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(UART3_IRQn, 0, 4);;
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(UART3, UART1_BAUD, USART_PM_NONE);
	
	USART_STAT0(UART3) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(UART3) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(UART3) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */
#endif

#if UART4_FIFO_EN == 1			/* 串口5 TX = PC12   RX = PD2 */
	/* 使能 GPIO TX/RX 时钟 */
	UART4_TX_GPIO_CLK_ENABLE();
	UART4_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	UART4_CLK_ENABLE();	

	/* 配置TX引脚 */
	gpio_af_set(UART4_TX_GPIO_PORT, USART1_TX_AF, UART4_TX_PIN);
	gpio_mode_set(UART4_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, UART4_TX_PIN);
	gpio_output_options_set(UART4_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, UART4_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(UART4_RX_GPIO_PORT, USART0_RX_AF, UART4_RX_PIN);
	gpio_mode_set(UART4_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, UART4_RX_PIN);
	gpio_output_options_set(UART4_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, UART4_RX_PIN);
	

	/* 配置NVIC the NVIC for UART */   
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(UART4_IRQn, 0, 5);;
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(UART4, UART1_BAUD, USART_PM_NONE);
	
	USART_STAT0(UART4) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(UART4) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(UART4) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */
#endif

#if UART5_FIFO_EN == 1			/* USART6 */
	/* 使能 GPIO TX/RX 时钟 */
	USART5_TX_GPIO_CLK_ENABLE();
	USART5_RX_GPIO_CLK_ENABLE();
	
	/* 使能 USARTx 时钟 */
	USART5_CLK_ENABLE();	

	/* 配置TX引脚 */
	gpio_af_set(USART5_TX_GPIO_PORT, USART1_TX_AF, USART5_TX_PIN);
	gpio_mode_set(USART5_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART5_TX_PIN);
	gpio_output_options_set(USART5_TX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART5_TX_PIN);
	
	/* 配置RX引脚 */
	gpio_af_set(USART5_RX_GPIO_PORT, USART0_RX_AF, USART5_RX_PIN);
	gpio_mode_set(USART5_RX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, USART5_RX_PIN);
	gpio_output_options_set(USART5_RX_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, USART5_RX_PIN);
	

	/* 配置NVIC the NVIC for UART */   
	nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
	nvic_irq_enable(USART5_IRQn, 0, 6);;
  
	/* 配置波特率、奇偶校验 */
	bsp_SetUartParam(USART5,  UART1_BAUD, USART_PM_NONE);
	
	USART_STAT0(USART5) &= ~USART_STAT0_TC;     /* 清除TC发送完成标志 */
	USART_STAT0(USART5) &= ~USART_STAT0_RBNE;   /* 清除RXNE接收标志 */

	USART_CTL0(USART5) |= USART_CTL0_RBNEIE;	/* 使能PE. RX接受中断 */
#endif

}

static void UartSend(UART_T *_pUart, uint8_t *_ucaBuf, uint16_t _usLen)
{
	uint16_t i;

	for (i = 0; i < _usLen; i++)
	{
		/* 如果发送缓冲区已经满了，则等待缓冲区空 */
		while (1)
		{
			__IO uint16_t usCount;

			DISABLE_INT();
			usCount = _pUart->usTxCount;
			ENABLE_INT();

			if (usCount < _pUart->usTxBufSize)
			{
				break;
			}
			else if(usCount == _pUart->usTxBufSize)/* 数据已填满缓冲区 */
			{
				if((USART_CTL0(_pUart->uart) & USART_CTL0_TBEIE) == 0)
				{
					USART_CTL0(_pUart->uart) |= USART_CTL0_TBEIE;
				}  
			}
		}

		/* 将新数据填入发送缓冲区 */
		_pUart->pTxBuf[_pUart->usTxWrite] = _ucaBuf[i];

		DISABLE_INT();
		if (++_pUart->usTxWrite >= _pUart->usTxBufSize)
		{
			_pUart->usTxWrite = 0;
		}
		_pUart->usTxCount++;
		ENABLE_INT();
	}
	
	USART_CTL0(_pUart->uart) |= USART_CTL0_TBEIE;	/* 使能发送中断（缓冲区空） */
}

static void UartIRQ(UART_T *_pUart)
{
	uint32_t isrflags   = USART_STAT0(_pUart->uart);
	uint32_t ctl0its	= USART_CTL0(_pUart->uart);
	uint32_t ctl2its	= USART_CTL2(_pUart->uart);

	/* 处理接收中断  */
	if ((isrflags & USART_STAT0_RBNE) != RESET)
	{
		/* 从串口接收数据寄存器读取数据存放到接收FIFO */
		uint8_t ch;

		ch = USART_DATA(_pUart->uart);
		_pUart->pRxBuf[_pUart->usRxWrite] = ch;
		if (++_pUart->usRxWrite >= _pUart->usRxBufSize)
		{
			_pUart->usRxWrite = 0;
		}
		if (_pUart->usRxCount < _pUart->usRxBufSize)
		{
			_pUart->usRxCount++;
		}

		/* 回调函数,通知应用程序收到新数据,一般是发送1个消息或者设置一个标记 */
		//if (_pUart->usRxWrite == _pUart->usRxRead)
		//if (_pUart->usRxCount == 1)
		{
			if (_pUart->ReciveNew)
			{
				_pUart->ReciveNew(ch); /* 比如，交给MODBUS解码程序处理字节流 */
			}
		}
	}

	/* 处理发送缓冲区空中断 */
	if ( ((isrflags & USART_STAT0_TBE) != RESET) && (ctl0its & USART_CTL0_TBEIE) != RESET)
	{
		//if (_pUart->usTxRead == _pUart->usTxWrite)
		if (_pUart->usTxCount == 0)
		{
			/* 发送缓冲区的数据已取完时， 禁止发送缓冲区空中断 （注意：此时最后1个数据还未真正发送完毕）*/
			USART_CTL0(_pUart->uart) &= ~(USART_CTL0_TBEIE);

			/* 使能数据发送完毕中断 */
			USART_CTL0(_pUart->uart) |= USART_CTL0_TCIE;
		}
		else
		{
			_pUart->Sending = 1;
			
			/* 从发送FIFO取1个字节写入串口发送数据寄存器 */
			//USART_SendData(_pUart->uart, _pUart->pTxBuf[_pUart->usTxRead]);
			USART_DATA(_pUart->uart) = _pUart->pTxBuf[_pUart->usTxRead];
			if (++_pUart->usTxRead >= _pUart->usTxBufSize)
			{
				_pUart->usTxRead = 0;
			}
			_pUart->usTxCount--;
		}

	}
	/* 数据bit位全部发送完毕的中断 */
	if (((isrflags & USART_STAT0_TC) != RESET) && ((ctl0its & USART_CTL0_TCIE) != RESET))
	{
		//if (_pUart->usTxRead == _pUart->usTxWrite)
		if (_pUart->usTxCount == 0)
		{
			/* 如果发送FIFO的数据全部发送完毕，禁止数据发送完毕中断 */
			USART_CTL0(_pUart->uart) &= ~(USART_CTL0_TCIE);
			
			/* 回调函数, 一般用来处理RS485通信，将RS485芯片设置为接收模式，避免抢占总线 */
			if (_pUart->SendOver)
			{
				_pUart->SendOver();
			}
			
			_pUart->Sending = 0;
		}
		else
		{
			/* 正常情况下，不会进入此分支 */

			/* 如果发送FIFO的数据还未完毕，则从发送FIFO取1个数据写入发送数据寄存器 */
			//USART_SendData(_pUart->uart, _pUart->pTxBuf[_pUart->usTxRead]);
			USART_DATA(_pUart->uart) = _pUart->pTxBuf[_pUart->usTxRead];
			if (++_pUart->usTxRead >= _pUart->usTxBufSize)
			{
				_pUart->usTxRead = 0;
			}
			_pUart->usTxCount--;
		}
	}
}
